--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<header id="header">
 			<div id="head-container">
-				<img id="header-img" src="logo.png">
+				<img id="header-img" src="imgs/logo.png" alt="logo">
 				<nav id="nav-bar">
 					<a class="nav-link" href="#videoNav">LIVE BBQ!</a>
 					<a class="nav-link" href="#offers">Pricing</a>	
@@ -29,7 +29,7 @@
 				<table>
 					<tr>
 						<td>
-							<img class ="table-img" src="https://image.flaticon.com/icons/svg/426/426833.svg">
+							<img class ="table-img" src="imgs/icon1.png" alt="icon">
 						</td>
 						<td>
 							<h2>Always Hot !</h2>
@@ -38,7 +38,7 @@
 					</tr>
 					<tr>
 						<td>
-							<img class ="table-img" src="https://image.flaticon.com/icons/svg/237/237205.svg">
+							<img class ="table-img" src="imgs/icon3.png" alt="icon">
 						</td>
 						<td>
 							<h2>Online " 24 / 7 "</h2>
@@ -47,7 +47,7 @@
 					</tr>
 					<tr>
 						<td>
-							<img class ="table-img" src="https://image.flaticon.com/icons/svg/147/147293.svg">
+							<img class ="table-img" src="imgs/icon2.png" alt="icon">
 						</td>
 						<td>
 							<h2>20% OFF !</h2>
